# webqr-zxing

./: Dockerfile  README.md  docker-compose.yml  index.html  meson.build  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  wrangler.jsonc
.github/workflows/: ci.yml
public/: manifest.json  manifest.webmanifest
src/: app.tsx  index.ts  index.tsx  query.tsx  zxing-worker-proxy.ts  zxing-worker.ts
